tests/compile_fail/ktstr_test_non_key_value.stderr
error: expected `key = value`
 --> tests/compile_fail/ktstr_test_non_key_value.rs:6:14
  |
6 | #[ktstr_test(something)]
  |              ^^^^^^^^^

warning: unused import: `anyhow::Result`
 --> tests/compile_fail/ktstr_test_non_key_value.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ktstr::assert::AssertResult`
 --> tests/compile_fail/ktstr_test_non_key_value.rs:2:5
  |
2 | use ktstr::assert::AssertResult;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ktstr::scenario::Ctx`
 --> tests/compile_fail/ktstr_test_non_key_value.rs:4:5
  |
4 | use ktstr::scenario::Ctx;
  |     ^^^^^^^^^^^^^^^^^^^^
